<resources>
    <string name="app_name">Estudonauta</string>
    <string name="strDireitos">all rights reserved to estudonauta.com</string>
    <string name="strTeam">Team</string>
    <string name="strCursos">courses</string>
    <string name="strMedia">Media</string>
    <string name="strBtnVoltar">Back</string>
    <string name="strEquipeTitulo">Estudonauta Team</string>
    <string name="strTextoDescricao">The Estudonauta idea was born in 2016 and since then several test videos have been recorded to validate the idea and model the format. At the end of 2017 Alpha Testing was opened for 200 Founding students and at the end of 2018 Beta Testing was opened for many others. The platform today has hundreds of classes, divided into several courses that are being launched in modules. The team started with three people and today has 8 professionals and an intern, each specialized in a specific area. So, when you receive a new module and get ready to watch all the videos, the work was done by all these guys, which we will list below:</string>
    <string name="strEquipeCaynan">Caynan Scremin (Editing cuts)</string>
    <string name="strEquipeFelipeAlafy">Felipe Alafy (Android Developer)</string>
    <string name="strEquipeGuanabara" >Gustavo Guanabara (Teacher)</string>
    <string name="strEquipeItalo">Italo Alves (Editing cuts)</string>
    <string name="strEquipeMichel">Michel Guanabara (Completion)</string>
    <string name="strEquipePriscila">Priscila Marinho (Programadora)</string>
    <string name="strEquipeRamon">Ramon Felinto (Desing)</string>
    <string name="strEquipeVera">Vera Machado (Tutor)</string>
    <string name="strEquipeYgor">Ygor Escure (Completion)</string>
    <string name="strEstudonautaLogo" >Estudonauta icon</string>
    <string name="strCursoTitulo">All Cuorses</string>
    <string name="strCursoPortugol">Cuorse of Logic with portugol studio.</string>
    <string name="strCursoLingC">Cuorse of Language C.</string>
    <string name="strCursoLingCSharp">Cuorse of Language C#.</string>
    <string name="strCursoKotlin">Cuorse of Language Kotlin.</string>
    <string name="strCursoPHP">Cuorse of PHP + MYSQL.</string>
    <string name="strCursoAndroid">Cuorse of Android Studio.</string>
    <string name="strCursoProdVideos">Cuorse of videos production.</string>
</resources>