<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ActivityCursos">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/strCursoTitulo"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoPortugol"
                app:srcCompat="@drawable/cursoportugol" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoLingC"
                app:srcCompat="@drawable/cursolingc" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoKotlin"
                app:srcCompat="@drawable/cursokotlin" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoLingCSharp"
                app:srcCompat="@drawable/cursolingcsharp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoAndroid"
                app:srcCompat="@drawable/cursoandroid" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoPHP"
                app:srcCompat="@drawable/cursophp" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursoProdVideos"
                app:srcCompat="@drawable/cursovideo" />

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnCursosVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cianoEscuro"
        android:onClick="back"
        android:text="@string/strBtnVoltar"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>